<resources>
    <string name="app_name">网易视频菠萝</string>

    <string name="button_allow">允许</string>
    <string name="button_deny">拒绝</string>
    <string name="button_enter">确定</string>
    <string name="button_cancel">取消</string>

    <string name="home_navi_main">首页</string>
    <string name="home_navi_mine">我的</string>
    <string name="home_navi_discovery">发现</string>

    <string name="view_histroy">观看历史</string>


    <string name="network_error">网络不给力</string>
    <string name="double_click_exit">确认退出</string>
    <string name="no_more_content">无更多内容</string>
    <string name="loading_error">加载失败，点击重试</string>
    <string name="loading">正在加载</string>

    <!-- 加载状态相关 -->
    <string name="view_empty">没有数据~</string>
    <string name="view_network_error">网络异常~</string>
    <string name="view_no_network">没有网络~</string>

    <string name="login_tips">登录后可使用同步数据等完整功能</string>
    <string name="free_data_watch_video">看视频免流量</string>

    <string name="my_favorite">我喜欢的</string>
    <string name="my_subscribed">我订阅的</string>
    <string name="watch_histroy">观看历史</string>
    <string name="setting">设置</string>
    <string name="login">登录</string>
</resources>
