<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_main"
        android:enabled="true"
        android:icon="@drawable/ic_newspaper_white_24dp"
        android:title="@string/home_navi_main"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_discovery"
        android:enabled="true"
        android:icon="@drawable/ic_gallery_white_24dp"
        android:title="@string/home_navi_discovery"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_mine"
        android:enabled="true"
        android:icon="@drawable/ic_youtube_white_24dp"
        android:title="@string/home_navi_mine"
        app:showAsAction="ifRoom"/>
</menu>